crates/plotnik-lib/tests/02-parser/recovery_validation/quantified_negated_field.txt
Q = (pair -key*)
------------------ DIAGNOSTICS -------------------
error: negated fields cannot be quantified
 --> query.ptk:1:15
  |
1 | Q = (pair -key*)
  |               ^
  |
help: remove the quantifier
  |
1 - Q = (pair -key*)
1 + Q = (pair -key)
  |
help: a negated field asserts absence and produces no value
